--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,10 +4,16 @@ body, html {
   height: 100%;
 }
 
+#denote-app {
+  width: 100%;
+  height: 100%;
+}
+
 .editor-container {
   display: flex;
+  flex: 1;
   width: 50%;
-  height: 80%;
+  height: 100%;
 }
 
 .text-editor {
