--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,7 +9,7 @@ body, html {
   height: 100%;
 }
 
-.editor-container {
+.text-editor-wrapper {
   display: flex;
   flex: 1;
   width: 50%;
@@ -19,4 +19,7 @@ body, html {
 .text-editor {
   width: 100%;
   height: 100%;
+  outline: 0;
+  border-right: 1px solid #f8f8f8;
+  overflow-y: scroll;
 }
