--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,7 @@
+{{text-editor
+  contenteditable=true
+  setEditor=(route-action "setEditor")
+  save=(route-action "save")
+  createSideNote=(route-action "createSideNote")
+}}
 {{outlet}}
