--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,8 @@ body, html {
 #denote-app {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-flow: row;
 }
 
 .text-editor-wrapper {
@@ -22,4 +24,11 @@ body, html {
   outline: 0;
   border-right: 1px solid #f8f8f8;
   overflow-y: scroll;
+}
+
+.side-note-page {
+  display: flex;
+  flex-flow: column;
+  flex: 1;
+  width: 50%
 }
