--- a/app/templates/components/side-note-page.hbs
+++ b/app/templates/components/side-note-page.hbs
@@ -2,4 +2,6 @@
   <div class="sideNote">
     {{{sideNote.html}}}
   </div>
+{{else}}
+  <div id="side-note-default-editor" contenteditable="true"></div>
 {{/each}}
