--- a/app/templates/components/text-editor.hbs
+++ b/app/templates/components/text-editor.hbs
@@ -1,1 +1,6 @@
-<div class="text-editor"></div>
+{{trix-editor
+  className="test"
+  editorClass="text-editor"
+  autofocus=true
+  trix-change=(route-action "save")
+}}
