--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,19 +18,30 @@ body, html {
   flex: 1;
   width: 50%;
   height: 100%;
+  border-right: 1px solid #f8f8f8;
+
+  & > .ember-view {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .text-editor {
-  width: 100%;
-  height: 100%;
   outline: 0;
-  border-right: 1px solid #f8f8f8;
   overflow-y: scroll;
+}
+
+trix-editor {
+  border: 0;
 }
 
 .side-note-page {
   display: flex;
   flex-flow: column;
   flex: 1;
-  width: 50%
+  width: 50%;
+
+  trix-toolbar {
+    display: none;
+  }
 }
