--- a/app/templates/components/text-editor.hbs
+++ b/app/templates/components/text-editor.hbs
@@ -1,6 +1,6 @@
-{{trix-editor
-  className="test"
-  editorClass="text-editor"
+{{ember-trix
+  class="text-editor"
   autofocus=true
+  placeholder="Enter Text Here"
   trix-change=(route-action "save")
 }}
