--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,13 @@
 @import "bower_components/font-awesome/scss/font-awesome";
 
+$fonts-main: "Lucida Grande", "Helvetica Neue", Helvetica, Sans;
+$color-concrete: #F3F3F3;
+
 body, html {
   padding: 0;
   margin: 0;
   height: 100%;
+  font-family: $fonts-main;
 }
 
 #denote-app {
@@ -13,35 +17,59 @@ body, html {
   flex-flow: row;
 }
 
-.text-editor-wrapper {
+.editor {
   display: flex;
-  flex: 1;
-  width: 50%;
+  width: 80%;
   height: 100%;
   border-right: 1px solid #f8f8f8;
+  padding: 0 1rem;
 
   & > .ember-view {
-    width: 100%;
-    height: 100%;
   }
 }
 
 .text-editor {
+  width: 100%;
+  height: 100%;
   outline: 0;
   overflow-y: scroll;
 }
 
+trix-toolbar {
+  margin-top: 1rem;
+}
+
 trix-editor {
+  padding: 1rem 0;
   border: 0;
+
+  & > *:hover {
+    background-color: $color-concrete;
+  }
 }
 
 .side-note-page {
   display: flex;
   flex-flow: column;
-  flex: 1;
   width: 50%;
 
   trix-toolbar {
     display: none;
   }
+}
+
+// trix
+trix-toolbar .button_group button.heading::before {
+  font-family: $fonts-main;
+  font-weight: 900;
+  margin-top: 4px;
+  font-size: 18px;
+}
+
+trix-toolbar .button_group button.h1::before {
+  content: 'H1';
+}
+
+trix-toolbar .button_group button.h2::before {
+  content: 'H2';
 }
