--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,10 @@ $fonts-main: "Lucida Grande", "Helvetica Neue", Helvetica, Sans;
 $color-concrete: #F3F3F3;
 $color-neptune: #78B8BA;
 $color-smalt-blue: #4F9092;
+$color-grey: #ccc;
+$color-black: #000;
+$color-mine-shaft: #333333;
+$color-catskill-white: #EEF6F7;
 
 body, html {
   padding: 0;
@@ -16,14 +20,13 @@ body, html {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-flow: row;
+  flex-direction: column;
 }
 
 .editor {
   display: flex;
-  width: 80%;
+  width: 100%;
   height: 100%;
-  border-right: 1px solid #f8f8f8;
 
   trix-toolbar {
     padding-left: 1rem;
@@ -41,7 +44,7 @@ trix-toolbar {
   margin-top: 1rem;
 }
 
-trix-editor {
+.text-editor trix-editor {
   padding: 1rem 0 1rem 1rem;
   border: 0;
 
@@ -69,14 +72,22 @@ trix-editor {
 .comments {
   display: flex;
   flex-flow: column;
-  width: 50%;
-
-  trix-toolbar {
-    display: none;
-  }
+  width: 40%;
+  padding: 1rem;
 }
 
-.-is-commentable .create-comment-button {
+.comment-editor {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.-is-on-commenting .comment-editor {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.-is-commentable .create-comment-button,
+.-is-on-commenting .comments__btn, {
   opacity: 1;
   pointer-events: auto;
 }
@@ -89,13 +100,65 @@ trix-editor {
   border-radius: 3px;
   width: 1.2em;
   height: 1.2em;
-  margin-left: 0.5em;
+  margin-left: -1em;
   line-height: 1.1em;
   cursor: pointer;
   color: $color-smalt-blue;
 
   &:hover {
     color: $color-neptune;
+  }
+}
+
+.note-title {
+  color: $color-mine-shaft;
+  font-family: $fonts-main;
+  font-weight: 900;
+  display: flex;
+  height: 40px;
+  font-size: 100%;
+  border: 0;
+  outline: 0;
+  padding: 0 1rem;
+  border-bottom: 1px solid $color-concrete;
+}
+
+.note-content {
+  display: flex;
+  flex: 1;
+  height: 100%;
+}
+
+.note-content__left-pane {
+  display: flex;
+  flex: 1;
+  width: 60%;
+  flex-direction: column;
+  border-right: 1px solid $color-concrete;
+}
+
+.comments__button-row {
+  padding: 0.5em 0;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.comments__btn {
+  opacity: 0;
+  pointer-events: none;
+  border: 1px solid $color-grey;
+  color: $color-grey;
+  font-size: 0.8em;
+  line-height: 1.2em;
+  margin-left: 1em;
+  padding: 0.2em 1em;
+  border-radius: 3px;
+  text-align: center;
+  cursor: pointer;
+
+  &:hover {
+    color: $color-black;
+    border-color: $color-black;
   }
 }
 
