--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -111,6 +111,7 @@ trix-toolbar {
 }
 
 .note-title {
+  background-color: $color-catskill-white;
   color: $color-mine-shaft;
   font-family: $fonts-main;
   font-weight: 900;
