--- a/app/styles/base/project/_variables.scss
+++ b/app/styles/base/project/_variables.scss
@@ -3,6 +3,7 @@ $color-concrete: #F3F3F3;
 $color-neptune: #78B8BA;
 $color-smalt-blue: #4F9092;
 $color-grey: #ccc;
+$color-scorpion: #635A5C;
 $color-black: #000;
 $color-mine-shaft: #333333;
 $color-catskill-white: #EEF6F7;
