--- a/app/styles/specifics/_note-editor.scss
+++ b/app/styles/specifics/_note-editor.scss
@@ -1,9 +1,10 @@
 .note-editor {
   display: flex;
-  width: 50%;
+  width: 80%;
   border-left: 1px solid $color-concrete;
   border-right: 1px solid $color-concrete;
   flex-direction: column;
   outline: 0;
   padding: 1rem;
+  overflow-y: scroll;
 }
