--- a/app/templates/components/denote-notes.hbs
+++ b/app/templates/components/denote-notes.hbs
@@ -6,9 +6,6 @@
 {{note-editor
   notes=notes
   openedNote=openedNote
-}}
-{{comment-editor
-  notes=notes
-  openedNote=openedNote
+  resizeComments=(route-action "resizeComments")
 }}
 {{outlet}}
