--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,8 @@ body, html {
   margin: 0;
   height: 100%;
   font-family: $fonts-main;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
 #denote-app, .app-wrapper {
@@ -16,168 +18,42 @@ body, html {
   flex-direction: row;
 }
 
-.editor {
-  display: flex;
-  width: 100%;
-  height: 100%;
-
-  trix-toolbar {
-    padding-left: 1rem;
-  }
-}
-
-.text-editor {
-  width: 100%;
-  height: 100%;
-  outline: 0;
-  overflow-y: scroll;
-}
-
-trix-toolbar {
-  margin-top: 1rem;
-}
-
-.text-editor trix-editor {
-  padding: 1rem 0 1rem 1rem;
-  border: 0;
-
-  div, li, pre, blockquote, h1, h2, h3 {
-    position: relative;
-    transition: all 100ms;
-  }
-
-  pre {
-    line-height: 1.4em;
-  }
-
-  & > div:hover,
-  & li:hover,
-  & pre:hover,
-  & h1:hover,
-  & h2:hover,
-  & h3:hover,
-  & blockquote:hover {
-    background-color: $color-concrete;
-  }
-
-}
-
-.comments {
-  display: flex;
-  flex-flow: column;
-  width: 40%;
-  padding: 1rem;
-}
-
-.comment-editor {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.-is-on-commenting .comment-editor {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.-is-commentable .create-comment-button,
-.-is-on-commenting .comments__btn, {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.create-comment-button {
-  opacity: 0;
-  pointer-events: none;
-  position: absolute;
-  text-align: center;
-  border-radius: 3px;
-  width: 1.2em;
-  height: 1.2em;
-  margin-left: -1em;
-  line-height: 1.1em;
-  cursor: pointer;
-  color: $color-smalt-blue;
-
-  &:hover {
-    color: $color-neptune;
-  }
-}
-
-.note-title {
-  background-color: $color-catskill-white;
-  color: $color-mine-shaft;
-  font-family: $fonts-main;
-  font-weight: 900;
-  display: flex;
-  height: 40px;
-  font-size: 100%;
-  border: 0;
-  outline: 0;
-  padding: 0 1rem;
-  border-bottom: 1px solid $color-concrete;
-}
-
-.note-content {
-  display: flex;
-  flex: 1;
-  height: 100%;
-}
-
-.note-content__left-pane {
-  display: flex;
-  flex: 1;
-  width: 60%;
-  flex-direction: column;
-  border-right: 1px solid $color-concrete;
-}
-
-.comments__button-row {
-  padding: 0.5em 0;
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.comments__btn {
-  opacity: 0;
-  pointer-events: none;
-  border: 1px solid $color-grey;
-  color: $color-grey;
-  font-size: 0.8em;
-  line-height: 1.2em;
-  margin-left: 1em;
-  padding: 0.2em 1em;
-  border-radius: 3px;
-  text-align: center;
-  cursor: pointer;
-
-  &:hover {
-    color: $color-black;
-    border-color: $color-black;
-  }
-}
-
-// trix
-trix-toolbar .button_group button.heading::before {
-  font-family: $fonts-main;
-  font-weight: 900;
-  margin-top: 4px;
-  font-size: 18px;
-}
-
-trix-toolbar .button_group button.h1::before {
-  content: 'H1';
-}
-
-trix-toolbar .button_group button.h2::before {
-  content: 'H2';
-}
-
-trix-editor blockquote {
-  margin: 0;
-  padding: 1em;
-}
-
-// new
 .ember-content-editable {
   outline: 0;
+}
+
+.note-editor__block-row {
+  display: flex;
+  flex-direction: row;
+  margin: 1em 6em;
+  line-height: 140%;
+}
+
+.note-editor__block {
+  margin-right: 1em;
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+}
+
+.note-editor__comment-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  width: 35%;
+}
+
+.note-editor__comment {
+  position: absolute;
+  height: 0;
+  overflow: hidden;
+  color: $color-scorpion;
+  font-size: 0.8em;
+  line-height: 120%;
+  margin-top: 0.4em;
+
+  &:focus {
+    overflow-y: scroll;
+  }
 }
