--- a/app/styles/specifics/_note-list.scss
+++ b/app/styles/specifics/_note-list.scss
@@ -4,3 +4,28 @@
   height: 100%;
   flex-direction: column;
 }
+
+.note-list__item {
+  position: relative;
+  font-size: 0.8em;
+  font-weight: 900;
+  padding: 0.5em 1em;
+  cursor: default;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.note-list__item:after {
+  position: absolute;
+  content: ' ';
+  width: 96%;
+  border-bottom: 1px solid $color-concrete;
+  margin: auto;
+  left: 2%;
+  bottom: 0;
+}
+
+.note-list__item:hover {
+  // background-color: $color-concrete;
+}
