--- a/app/templates/components/note-list.hbs
+++ b/app/templates/components/note-list.hbs
@@ -1,5 +1,6 @@
+<div class="note-list__toolbar">{{fa-icon "plus"}} </div>
 {{#each notes as |note|}}
-  <div {{action selectNote note.id}}>{{note.title}}</div>
+  <div class="note-list__item" {{action selectNote note.id}}>{{note.title}}</div>
 {{else}}
   <div>No notes availabe. Create one?</div>
 {{/each}}
