--- a/app/templates/components/denote-notes.hbs
+++ b/app/templates/components/denote-notes.hbs
@@ -2,6 +2,7 @@
   notes=notes
   openedNote=openedNote
   selectNote=(route-action "loadNote")
+  createNote=(route-action "createNote")
 }}
 {{note-editor
   notes=notes
