--- a/app/styles/specifics/_note-list.scss
+++ b/app/styles/specifics/_note-list.scss
@@ -1,8 +1,20 @@
 .note-list {
+  position: fixed;
   display: flex;
-  width: 20%;
+  width: 100%;
   height: 100%;
   flex-direction: column;
+}
+
+.note-list__item-header {
+  font-size: 0.8em;
+  background-color: #333;
+  color: #fff;
+  padding: 0.5em 1em;
+
+  .fa {
+    vertical-align: middle;
+  }
 }
 
 .note-list__item {
@@ -11,9 +23,35 @@
   font-weight: 900;
   padding: 0.5em 1em;
   cursor: default;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  min-height: 1em;
+
+  div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
+.note-list__message {
+  color: #999;
+  font-size: 0.8em;
+  padding: 0.5em 1em;
+}
+
+.note-list__message__new {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.note-list__item.-is-selected {
+  background-color: #EFEFEF;
+}
+
+.note-list__item__back {
+  position: absolute;
+  right: 1em;
+  cursor: pointer;
 }
 
 .note-list__item:after {
@@ -23,7 +61,7 @@
   border-bottom: 1px solid $color-concrete;
   margin: auto;
   left: 2%;
-  bottom: 0;
+  bottom: -1px;
 }
 
 .note-list__item:hover {
