--- a/app/styles/specifics/_note-list.scss
+++ b/app/styles/specifics/_note-list.scss
@@ -32,6 +32,17 @@
   }
 }
 
+.note-list__item-unsaved {
+  @extend .note-list__item;
+
+  background-color: #456789;
+  color: white;
+
+  div {
+    white-space: normal;
+  }
+}
+
 .note-list__message {
   color: #999;
   font-size: 0.8em;
