--- a/app/styles/base/__base.scss
+++ b/app/styles/base/__base.scss
@@ -1,1 +1,15 @@
 @import "project/variables";
+
+h1 {
+  font-size: 2.2em;
+  line-height: 120%;
+}
+
+h2 {
+  font-size: 1.8em;
+  line-height: 125%;
+}
+
+p {
+  line-height: 125%;
+}
