--- a/app/templates/components/browse-panel.hbs
+++ b/app/templates/components/browse-panel.hbs
@@ -1,8 +1,7 @@
 {{yield
   (hash
-    menuMode=menuMode
-    currentCollection=currentCollection
     setMenuMode=(action "setMenuMode")
     selectCollection=(action "selectCollection")
+    expandCollection=(action "expandCollection")
   )
 }}
