enter to confirm collection name

--- a/app/templates/components/collection-list.hbs
+++ b/app/templates/components/collection-list.hbs
@@ -13,7 +13,8 @@
       value=newCollection.name
       autofocus=true
       maxlength=50
-      focusOut=(action "create" newCollection)
+      focus-out=(action "create" newCollection)
+      enter=(action "create" newCollection)
     }}
   </div>
 {{/if}}
