--- a/app/templates/components/collection-viewer.hbs
+++ b/app/templates/components/collection-viewer.hbs
@@ -1,7 +1,7 @@
 <h1 class="collection-viewer__title">{{collection.name}}</h1>
 <div class="collection-viewer__note-list">
   {{#each collection.notes as |note|}}
-    <h2 class="collection-viewer__note-list__note" {{action (route-action "select" note)}}>
+    <h2 class="collection-viewer__note-list__note" {{action (route-action "selectNode" note)}}>
       {{mobiledoc-text-renderer
         class="collection-viewer__note-list__note__name"
         mobiledoc=note.body
